--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mini-project-travel",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "app.js",
   "scripts": {
     "init": "eslint --init",
     "lint": "eslint --ext .js --color pages/index",
     "fix": "eslint --fix --ext pages/**/*.js --color",
-    "release": "standard-version"
+    "release": "standard-version -- --release-as 1.0.1"
   },
   "repository": {
     "type": "git",
